* Eliminated the <tbody> from the message summary view.  JS now replaces the entire table including the <table></table> tags.  FINALLY got the browser to honor fixed column widths with no overflow, keeping the column proportions at 50/30/20 regardless of the width of the browser window. * I also eliminated the fix_scrollbar_bug div in this view because it is apparently not needed anymore (it was intended to fix a rendering bug in IE5 and IE6).  There is no need to wage an aggressive war on this div, but I will remove it from various places when the opportunity arises.

--- a/webcit/static/webcit.css
+++ b/webcit/static/webcit.css
@@ -653,11 +653,13 @@ body, #global {
 	cursor: pointer;
 }
 
-#message_list_body {
-	background-color: white !important;
+#summary_headers {
+	background-color: white;
+	width: 100%;
+	table-layout: fixed;
 }
 
-#message_list_body tr td {
+#summary_headers tr td {
 	overflow-y: hidden;
 	overflow-x: hidden; /* stop long subjects overflowing */
 }
